[package]
name = "gum-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = "0.4" # Use the latest version if available
mdbook-mermaid = "0.13.0" # Use the latest version if available

[build-dependencies]
mdbook = "0.4"

[workspace]

[package.metadata.scripts]
build = "mdbook build"
serve = "mdbook serve"